# django-custom-user

./: .env_example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
core/: settings.py  wsgi.py
templates/: base.html  home.html
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py
users/templates/: signup.html
users/templates/registration/: login.html
users/templates/users/: login.html  signup.html
